INCLUDE_DIRECTORIES(../include)
AUX_SOURCE_DIRECTORY(. DIR_SHELL_SRCS)
ADD_EXECUTABLE(main ${DIR_SHELL_SRCS})
FIND_PACKAGE(libpthread REQUIRED)
FIND_PACKAGE(libm REQUIRED)
MARK_AS_ADVANCED(

	LIBPTHREAD_INCLUDE_DIR
	LIBPTHREAD_LIBRARIES
	
	LIBM_INCLUDE_DIR
	LIBM_LIBRARIES
)
INCLUDE_DIRECTORIES(${LIBPTHREAD_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${LIBM_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(main js ${LIBPTHREAD_LIBRARIES} ${LIBM_LIBRARIES})